[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.74"
base64 = "0.21.5"
lazy_static = "1.4.0"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
